--- a/app.css
+++ b/app.css
@@ -161,3 +161,18 @@ body {
     background-color: #0088ff;
     color: white;
 }
+
+@media (min-width: 900px){
+    .panel{
+        flex-direction: row;
+    }
+    .pricing-plan{
+        border-bottom: none;
+        border-right: 1px solid #e1f1ff;
+        padding: 25px 50px;
+    }
+    .pricing-plan:last-child{
+        border-right: none;
+    }
+    
+}
